--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,8 +18,14 @@
 </head>
 <body>
     
-    <header>
-
+    <header id="bg-hero" class="header">
+       <div class="container">
+           <nav class="navBar">
+              <div class="logo">
+                  <a href="../html/index.html"><img src="../assets/icon/logo.svg" alt="logo" title="logo-image"></a>
+              </div>
+           </nav>
+       </div>
     </header>
 
     <main>
@@ -30,7 +36,7 @@
 
     </footer>
 
-    
+
     <script src="../js/index.js"></script>
 </body>
 </html>
