--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,16 +19,37 @@
 <body>
     
     <header id="bg-hero" class="header">
-       <div class="container">
-           <nav class="navBar">
+        <div class="container">
+            <nav class="navbar">
               <div class="logo">
-                  <a href="../html/index.html"><img src="../assets/icon/logo.svg" alt="logo" title="logo-image"></a>
+                <a href="#"><img src="../assets/icon/logo.svg" alt="logo"></a>
               </div>
-           </nav>
-       </div>
+              <ul class="main-nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#interactive">About</a></li>
+                <li><a href="#support">Careers</a></li>
+                <li><a href="#grid">Events</a></li>
+                <li><a href="#grid">Products</a></li>
+                <li><a href="#support">Support</a></li>
+              </ul>
+              <div class="burger">
+                <div class="line-1"></div>
+                <div class="line-2"></div>
+                <div class="line-3"></div>
+            </div>
+            </nav>
+            <div class="hero-text">
+              <p>Immersive experiences that deliver</p>
+            </div>
+          </div>
     </header>
 
-    <main>
+    <main class="main">
+        <div class="container">
+            <section class="interactive" id="interactive">
+
+            </section>
+        </div>
 
     </main>
 
