--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <nav class="navbar">
               <div class="logo">
-                <a href="#"><img src="../assets/icon/logo.svg" alt="logo"></a>
+                <a href="#"><img src="../assets/icon/logo.svg" alt="logo" title="logo"></a>
               </div>
               <ul class="main-nav">
                 <li><a href="index.html">Home</a></li>
@@ -46,9 +46,26 @@
 
     <main class="main">
         <div class="container">
+            <!--Interactive Section-->
             <section class="interactive" id="interactive">
+                <div class="interactive__image-container">
+                    <img src="../assets/img/desktop/image-interactive.jpg" alt="Interactive_image" title="Interactive-img">
+                </div>
+               <div class="interactive__content">
+                   <p class="virtual">The leader <br>Interactive BR</p>
+                   <p>Founded in 2011, Loopstudios has been producing world-class virtual reality 
+                    projects for some of the best companies around the globe. Our award-winning 
+                    creations have transformed businesses through digital experiences that bind 
+                    to their brand.</p>
+               </div>
+            </section>
+            <!--End Interactive-->
+
+            <!--Grid section-->
+            <section class="grid" id="grid">
 
             </section>
+            <!--End Grid-->
         </div>
 
     </main>
