--- a/src/html/index.html
+++ b/src/html/index.html
@@ -52,7 +52,7 @@
                     <img src="../assets/img/desktop/image-interactive.jpg" alt="Interactive_image" title="Interactive-img">
                 </div>
                <div class="interactive__content">
-                   <p class="virtual">The leader <br>Interactive BR</p>
+                   <p class="virtual">The leader <br>Interactive VR</p>
                    <p>Founded in 2011, Loopstudios has been producing world-class virtual reality 
                     projects for some of the best companies around the globe. Our award-winning 
                     creations have transformed businesses through digital experiences that bind 
@@ -64,13 +64,27 @@
             <!--Grid section-->
             <section class="grid" id="grid">
 
+                <div class="grid-title">
+                    <h3>Our Creation</h3>
+                    <p class="see-all"><a href="/">See all</a></p>
+                </div>
+                <div class="grid-container">
+                    <img src="../assets/img/desktop/image-deep-earth.jpg" alt="img-earth" title="img-earth" >
+                    <img src="../assets/img/desktop/image-night-arcade.jpg" alt="img-earth" title="img-earth" >
+                    <img src="../assets/img/desktop/image-soccer-team.jpg" alt="img-earth" title="img-earth" >
+                    <img src="../assets/img/desktop/image-grid.jpg" alt="img-earth" title="img-earth" >
+                    <img src="../assets/img/desktop/image-from-above.jpg" alt="img-earth" title="img-earth" >
+                    <img src="../assets/img/desktop/image-pocket-borealis.jpg" alt="img-earth" title="img-earth" >
+                    <img src="../assets/img/desktop/image-curiosity.jpg" alt="img-earth" title="img-earth" >
+                    <img src="../assets/img/desktop/image-fisheye.jpg" alt="img-earth" title="img-earth" >
+                </div>
             </section>
             <!--End Grid-->
         </div>
 
     </main>
 
-    <footer>
+    <footer id="support">
 
     </footer>
 
