--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <link rel="icon" type="image/png" sizes="32*32"  href="../assets/icon/favicon-32x32.png">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/styleMobile.css" media="screen and (min-width: 337px)">
+    <link rel="stylesheet" href="../css/styleMobile.css" media="screen and (min-width: 335px)">
     <link rel="stylesheet" href="../css/styleDesktop.css" media="screen and (max-width: 1440px) ">
     <title>Frontend-Web</title>
 </head>
@@ -65,7 +65,7 @@
             <section class="grid" id="grid">
 
                 <div class="grid-title">
-                    <h3>Our Creation</h3>
+                    <h3 title="title" >Our Creation</h3>
                     <p class="see-all"><a href="/">See all</a></p>
                 </div>
                 <div class="grid-container">
@@ -85,10 +85,36 @@
     </main>
 
     <footer id="support">
-
+       <div class="container">
+           <div class="logo-icons">
+               <div class="logo">
+                   <a href="#"><img src="../assets/icon/logo.svg" alt="logo" title="logo"></a>
+               </div>
+               <div class="icons">
+                   <a href="#"><img src="../assets/icon/icon-facebook.svg" alt="icon-face" title="icon-face"></a>
+                   <a href="#"><img src="../assets/icon/icon-twitter.svg" alt="icon-face" title="icon-face"></a>
+                   <a href="#"><img src="../assets/icon/icon-instagram.svg" alt="icon-face" title="icon-face"></a>
+                   <a href="#"><img src="../assets/icon/icon-pinterest.svg" alt="icon-face" title="icon-face"></a>
+               </div>
+           </div>
+           <div class="menu-copyright">
+               <div class="footer-menu">
+                   <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Events</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Support</a></li>
+                   </ul>
+               </div>
+               <div class="copyright">
+                <p>&copy; 2021 Loopstudios. All rights reserved.</p>
+              </div>
+           </div>
+       </div>
     </footer>
 
 
-    <script src="../js/index.js"></script>
+    <script src="../js/index.js" type="module"></script>
 </body>
 </html>
