--- a/src/html/indexSlide.html
+++ b/src/html/indexSlide.html
@@ -11,7 +11,7 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <link rel="icon" type="image/png" sizes="32*32"  href="../assets/icon/favicon-32x32.png">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="../css/mainSlide.css">
     <title>Slide</title>
 </head>
 <body>
@@ -24,31 +24,31 @@
     
       <div class="slide">
         <img
-          src="../assets/img/desktop/image-hero.jpg" alt="image"
+          src="../assets/img/mobile/image-hero.jpg" alt="image"
         />
       </div>
 
       <div class="slide">
         <img
-          src="../assets/img/desktop/image-hero.jpg" alt="image"
+          src="../assets/img/mobile/image-hero.jpg" alt="image"
         />
       </div>
 
       <div class="slide">
         <img
-          src="../assets/img/desktop/image-hero.jpg" alt="image"
+          src="../assets/img/mobile/image-hero.jpg" alt="image"
         />
       </div>
 
       <div class="slide">
         <img
-          src="../assets/img/desktop/image-hero.jpg" alt="image"
+          src="../assets/img/mobile/image-hero.jpg" alt="image"
         />
       </div>
 
       <div class="slide">
         <img
-          src="../assets/img/desktop/image-hero.jpg" alt="image"
+          src="../assets/img/mobile/image-hero.jpg" alt="image"
         />
       </div>
     </div>
