--- a/src/html/indexCard.html
+++ b/src/html/indexCard.html
@@ -11,10 +11,22 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <link rel="icon" type="image/png" sizes="32*32"  href="../assets/icon/favicon-32x32.png">
-    <link rel="stylesheet" href="../css/mainGrid.css">
+    <link rel="stylesheet" href="../sass/style.css">
     <title>Grid</title>
 </head>
 <body>
-    
+    <h1>CSS Grid Card</h1>
+
+    <a href="#" class="card">
+        <div class="card__image"></div>
+        <div class="card__content">
+            <div class="card__title">Cat T´m a Keane with a Dancer Dancer Dance</div>
+            <div class="card__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tenetur, ipsum nam vitae quidem beatae iusto explicabo dolores non eligendi saepe sapiente, dolore laudantium? Ullam totam voluptate laudantium officia quibusdam?
+            </div>
+            <div class="card__date">April 1,  2021</div>
+            <div class="card__readTime">5 min read</div>
+        </div>
+    </a>
 </body>
 </html>
